<resources>
    <string name="app_name">codeware_s_application1</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="facebook_app_id"/>
    <string name="fb_login_protocol_scheme">fb</string>
    <string name="facebook_client_token"/>
    <string name="lbl_credit_card">Credit Card</string>
    <string name="lbl_l">L</string>
    <string name="lbl_m">M</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_07_minites_ago">07 minites ago.</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account? Sign In</string>
    <string name="msg_did_t_receive_a2">Did\u2019t receive a code? Resent Code</string>
    <string name="msg_confirm_passwor">Confirm Password</string>
    <string name="lbl_s">S</string>
    <string name="lbl_casual">Casual</string>
    <string name="lbl_discount_code">Discount Code</string>
    <string name="msg_social_account2">Social Account Link One</string>
    <string name="lbl_reset_password">Reset Password</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="lbl_ariana_peter">Ariana Peter</string>
    <string name="lbl_write_a_review">Write a Review</string>
    <string name="lbl_new_password">New Password</string>
    <string name="lbl_usage_area">Usage Area</string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="lbl_onbording_two">Onbording Two</string>
    <string name="lbl_populer_items">Populer Items</string>
    <string name="lbl_108_002">108.00</string>
    <string name="msg_mahbuba_is_typi">Mahbuba is typing....</string>
    <string name="lbl_order_status">Order Status</string>
    <string name="lbl_summer">Summer</string>
    <string name="lbl_anne_christion">Anne Christion</string>
    <string name="lbl_560_00">$ 560.00</string>
    <string name="msg_transaction_his">Transaction History</string>
    <string name="lbl_animator">Animator</string>
    <string name="lbl_payment_mathod">Payment Mathod</string>
    <string name="lbl_pay_now">Pay Now</string>
    <string name="msg_new_south_wales">New south Wales, Australia</string>
    <string name="msg_arrived_in_16_0">Arrived In 16:00 Min</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_02_minites_ago">02 minites ago.</string>
    <string name="lbl_onbording_one">Onbording One</string>
    <string name="lbl_gaming">Gaming</string>
    <string name="lbl_min">Min</string>
    <string name="msg_based_on_1_024">Based on 1,024 reviews</string>
    <string name="lbl_13_minites_ago">13 minites ago.</string>
    <string name="lbl_l_a_girl2">L.A Girl</string>
    <string name="lbl_premium_watch">Premium Watch</string>
    <string name="lbl_popular_items">Popular Items</string>
    <string name="lbl_e">e</string>
    <string name="msg_05_55_pm_7_jun">05:55 PM, 7 June 2021</string>
    <string name="lbl_jeans_pent">Jeans Pent</string>
    <string name="lbl_alert">Alert</string>
    <string name="msg_we_need_your_re">We need your registration email to send 
you password reset code!</string>
    <string name="lbl_apple">Apple</string>
    <string name="lbl_recent_search">Recent Search</string>
    <string name="lbl_sleeping">Sleeping</string>
    <string name="lbl_all_for_you">All For You</string>
    <string name="msg_are_you_sure_yo">Are you sure you
want to unlink with google</string>
    <string name="lbl_brand">Brand</string>
    <string name="lbl_cats_jins">Cats &amp; Jins</string>
    <string name="lbl_latest_style">Latest Style</string>
    <string name="lbl_fee_delivery">Fee &amp; Delivery</string>
    <string name="lbl_consilor">Consilor</string>
    <string name="lbl_144_94">$ 144.94</string>
    <string name="lbl_117_002">117.00</string>
    <string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_color">Color</string>
    <string name="lbl_you">You</string>
    <string name="lbl_purchased_shoes">purchased Shoes</string>
    <string name="msg_verification_co">Verification Code</string>
    <string name="lbl_send_code">Send Code</string>
    <string name="lbl_yesterday">Yesterday</string>
    <string name="lbl_acting">Acting</string>
    <string name="msg_we_create_produ">We create products in collaboration with
great designers who are there to get the
coolest products for you.</string>
    <string name="lbl_1_day_ago">1 Day ago</string>
    <string name="msg_enter_the_code">Enter the code we sent your registed mail</string>
    <string name="lbl_personal_data">Personal Data</string>
    <string name="lbl_china">China</string>
    <string name="lbl_white_sneakers">White Sneakers</string>
    <string name="lbl_18_discount">18% Discount</string>
    <string name="msg_t_shirt_sungl">T-shirt &amp; Sunglass</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_complete">Complete</string>
    <string name="lbl_18_27">18:27</string>
    <string name="lbl_cool_product">Cool Product</string>
    <string name="lbl_bellow_average">Bellow Average</string>
    <string name="msg_delivery_addres">Delivery Address</string>
    <string name="lbl_11_01_1997">11-01-1997</string>
    <string name="lbl_chat">Chat</string>
    <string name="lbl_drawing">Drawing</string>
    <string name="msg_choose_which_yo">Choose which you have more interest
to give you best app experience.</string>
    <string name="lbl_4_8">4.8</string>
    <string name="msg_home_two_tab">Home Two - Tab Container</string>
    <string name="lbl_discount_items">Discount Items</string>
    <string name="lbl_type_a_message">Type a message</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_pinterest">Pinterest</string>
    <string name="msg_popular_items">Popular Items - Container</string>
    <string name="lbl_woman">Woman</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_men_s_t_shirt">Men\u2019s T-shirt</string>
    <string name="lbl_10">$ 10</string>
    <string name="lbl_linekedin">Linekedin</string>
    <string name="msg_100_coton_t_sh">100% Coton T-shirt</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="msg_confirm_deliver">Confirm Delivery</string>
    <string name="msg_fulfilled_by_ap">Fulfilled By App</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_register">Register</string>
    <string name="msg_casual_jeans_sh">Casual Jeans Shoes</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_560_002">560.00</string>
    <string name="lbl_let_s_sign_up">Let\u2019s Sign Up</string>
    <string name="lbl_writing">Writing</string>
    <string name="lbl_246_002">246.00</string>
    <string name="msg_welcome_to_inst">Welcome to Instagram</string>
    <string name="lbl_share">Share</string>
    <string name="msg_do_you_want_to">Do you want to
log out of the application</string>
    <string name="lbl_order_received">Order Received</string>
    <string name="lbl_apple_pay">Apple Pay</string>
    <string name="lbl_20_discount">20% Discount</string>
    <string name="lbl_lather_beg">Lather Beg</string>
    <string name="lbl_instagram">Instagram</string>
    <string name="lbl_165_00">$ 165.00</string>
    <string name="msg_we_always_try_p">We always try provide the cool products
and latest styles by maintaining the best
quality for you.</string>
    <string name="lbl_electonics">Electonics</string>
    <string name="msg_would_you_like">Would you like to write anything about this product?</string>
    <string name="lbl_add_to_card">Add To Card</string>
    <string name="lbl_nancy_wheeler">Nancy Wheeler</string>
    <string name="lbl_shelf_life">Shelf Life</string>
    <string name="msg_what_products_y">What products
you like most!</string>
    <string name="msg_drinks_june_07">Drinks, June 07, 6:20PM </string>
    <string name="lbl_mahbuba">Mahbuba</string>
    <string name="lbl_coundtry_hb">Coundtry HB</string>
    <string name="lbl_welcome_back">Welcome
Back!</string>
    <string name="lbl_80_002">80.00</string>
    <string name="lbl_settings">Settings</string>
    <string name="msg_discover_your_s">Discover your
Shopping Here</string>
    <string name="msg_order_completed">Order Completed Successfully!
Thank your and see you soon</string>
    <string name="lbl_average">Average</string>
    <string name="lbl_9999_999_999">9999 999 999</string>
    <string name="lbl_134_94">$ 134.94</string>
    <string name="lbl_134_98">$ 134.98</string>
    <string name="msg_350_characters">350 characters remaining</string>
    <string name="lbl_sign_up_sign_in">Sign Up Sign In</string>
    <string name="lbl_explore_shop">Explore Shop</string>
    <string name="msg_cash_on_deliver">Cash On Delivery</string>
    <string name="lbl_resent_code">Resent Code</string>
    <string name="lbl_0_37">0:37</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="lbl_no">No</string>
    <string name="lbl_books">Books</string>
    <string name="lbl_stylish_clothes">Stylish Clothes</string>
    <string name="lbl_blue_shoes">Blue shoes</string>
    <string name="lbl_installment">Installment</string>
    <string name="lbl_on_the_way">On The Way</string>
    <string name="lbl4">+</string>
    <string name="lbl2">$</string>
    <string name="lbl3">$ </string>
    <string name="lbl_watch_shoe">Watch &amp; Shoe</string>
    <string name="msg_already_have_an">Already have an account? Sign In</string>
    <string name="lbl_positive">Positive</string>
    <string name="lbl_xxl">XXL</string>
    <string name="msg_purchased_goggl">purchased goggle.</string>
    <string name="lbl_37_discount">37% Discount</string>
    <string name="lbl_write_a_review2">Write a review</string>
    <string name="lbl_max">Max</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_information">Information</string>
    <string name="lbl_song">Song</string>
    <string name="msg_you_purchased_s">You purchased Shoes</string>
    <string name="lbl_bangladesh">Bangladesh</string>
    <string name="lbl_fashionista">Fashionista</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_man">Man</string>
    <string name="msg_welcome_to_face">Welcome to Facebook</string>
    <string name="lbl_price">Price</string>
    <string name="msg_you_purchased_c">You purchased cats</string>
    <string name="lbl_whats_app">Whats App</string>
    <string name="msg_enter_a_new_pas">Enter a new password</string>
    <string name="msg_you_purchased_g">You purchased goggle.</string>
    <string name="lbl_reset">Reset</string>
    <string name="msg_or_continue_wit">or continue with</string>
    <string name="msg_welcome_to_goog">Welcome to Google</string>
    <string name="lbl_onbording">Onbording</string>
    <string name="lbl_pack_size">Pack Size</string>
    <string name="msg_social_account">Social Account Link</string>
    <string name="lbl_let_s_sign_in">Let\u2019s Sign In</string>
    <string name="msg_don_t_have_an_a2">Don\u2019t have an account? </string>
    <string name="lbl_google">Google</string>
    <string name="lbl_pinkflash">PinkFlash</string>
    <string name="lbl_108_00">$ 108.00</string>
    <string name="lbl_reading">Reading</string>
    <string name="lbl_jacket">Jacket</string>
    <string name="lbl_black_jacket">Black Jacket</string>
    <string name="lbl_total">Total</string>
    <string name="msg_add_photo_or_vi">Add Photo or Video</string>
    <string name="lbl_nsw_australia">NSW, Australia</string>
    <string name="lbl_checkout">Checkout</string>
    <string name="msg_click_here_to_u">Click here to upload</string>
    <string name="msg_write_yor_revie">Write yor Review</string>
    <string name="lbl_size_xl">Size: XL</string>
    <string name="lbl_address">Address</string>
</resources>